--- a/blog/conclusion-7.adoc
+++ b/blog/conclusion-7.adoc
@@ -1,7 +1,6 @@
----
-layout: layout
-title:  Conclusion
----
+= Conclusion
+:uri-asciidoctor: http://asciidoctor.org
+:icons: font
 
 
 Definitely not worth monetizing. The white flash crowd is loud but they are not that numerous. 
