--- a/blog/sleazy-marketing-6.adoc
+++ b/blog/sleazy-marketing-6.adoc
@@ -1,7 +1,6 @@
----
-layout: layout
-title:  Sleazy marketing
----
+= Sleazy marketing
+:uri-asciidoctor: http://asciidoctor.org
+:icons: font
 
 
 # marketing chromium white flash fix
