--- a/original/index-tmpl.adoc
+++ b/original/index-tmpl.adoc
@@ -2,6 +2,21 @@
 :uri-asciidoctor: http://asciidoctor.org
 :icons: font
 
+++++
+<ul>
+<li>
+asd
+</li>
+</ul>
+++++
+
+* level 1
+** level 2
+*** level 3
+**** level 4
+***** level 5
+****** level 5
+* level 1
 
 Content index
 
