--- a/original/index-tmpl.adoc
+++ b/original/index-tmpl.adoc
@@ -10,15 +10,9 @@ asd
 </ul>
 ++++
 
-* level 1
-** level 2
-*** level 3
-**** level 4
-***** level 5
-****** level 5
-* level 1
 
-Content index
+Index
 
+++++
 %%map%%
-
+++++
