--- a/blog/bringing-mouseless-to-the-average-user-brainstorming-9.adoc
+++ b/blog/bringing-mouseless-to-the-average-user-brainstorming-9.adoc
@@ -1,6 +1,9 @@
+link:index[Home]
+
 = bringing mouseless to the average user (brainstorming)
 :uri-asciidoctor: http://asciidoctor.org
 :icons: font
+
 
 
 ## bringing mouseless to the average user
