--- a/blog/me-and-the-keyboard-a-love-story-8.adoc
+++ b/blog/me-and-the-keyboard-a-love-story-8.adoc
@@ -1,6 +1,9 @@
+link:index[Home]
+
 = me and the keyboard. a love story.
 :uri-asciidoctor: http://asciidoctor.org
 :icons: font
+
 
 
 ## a bit of history - mouseless
