--- a/blog/thinking-about-vision-and-end-goal-4.adoc
+++ b/blog/thinking-about-vision-and-end-goal-4.adoc
@@ -1,6 +1,9 @@
+link:index[Home]
+
 = thinking about vision and end goal
 :uri-asciidoctor: http://asciidoctor.org
 :icons: font
+
 
 
 Ideally, I want the white flash bug fixed in google chrome so I dont have to maintain a fork in the first place. 
