--- a/blog/forking-and-fixing-a-bug-in-2016-3.adoc
+++ b/blog/forking-and-fixing-a-bug-in-2016-3.adoc
@@ -1,6 +1,9 @@
+link:index[Home]
+
 = Forking and fixing a bug in 2016
 :uri-asciidoctor: http://asciidoctor.org
 :icons: font
+
 
 
 # fixing the chromium white flash journey
