--- a/blog/fuck-the-average-user-stick-to-advanced-users-10.adoc
+++ b/blog/fuck-the-average-user-stick-to-advanced-users-10.adoc
@@ -1,6 +1,9 @@
+link:index[Home]
+
 = fuck the average user. Stick to advanced users.
 :uri-asciidoctor: http://asciidoctor.org
 :icons: font
+
 
 
 
