--- a/blog/test-11.adoc
+++ b/blog/test-11.adoc
@@ -7,11 +7,16 @@ link:index[Home]
 
 
 
+= test2
+:uri-asciidoctor: http://asciidoctor.org
+:icons: font
+:source-highlighter: pygments
+
+
+
 This is a sample page composed in AsciiDoc.
 Jekyll converts it to HTML using {uri-asciidoctor}[Asciidoctor].
 
 [source,ruby]
 puts "Hello, World!"
-
-
 
