--- a/blog/me-and-the-keyboard-a-love-story-8.adoc
+++ b/blog/me-and-the-keyboard-a-love-story-8.adoc
@@ -1,8 +1,7 @@
-link:index[Home]
-
 = me and the keyboard. a love story.
 :uri-asciidoctor: http://asciidoctor.org
 :icons: font
+:source-highlighter: pygments
 
 
 
