--- a/blog/thinking-about-vision-and-end-goal-4.adoc
+++ b/blog/thinking-about-vision-and-end-goal-4.adoc
@@ -1,8 +1,7 @@
-link:index[Home]
-
 = thinking about vision and end goal
 :uri-asciidoctor: http://asciidoctor.org
 :icons: font
+:source-highlighter: pygments
 
 
 
