--- a/blog/fuck-the-average-user-stick-to-advanced-users-10.adoc
+++ b/blog/fuck-the-average-user-stick-to-advanced-users-10.adoc
@@ -1,8 +1,7 @@
-link:index[Home]
-
 = fuck the average user. Stick to advanced users.
 :uri-asciidoctor: http://asciidoctor.org
 :icons: font
+:source-highlighter: pygments
 
 
 
