--- a/blog/someone-built-the-windows-binaries-based-on-my-work-5.adoc
+++ b/blog/someone-built-the-windows-binaries-based-on-my-work-5.adoc
@@ -1,9 +1,13 @@
+link:index[Home]
+
 = Someone built the windows binaries based on my work ;-)
 :uri-asciidoctor: http://asciidoctor.org
 :icons: font
 :source-highlighter: pygments
 
 
+
+== windows bins
 
 Since getting the word out on the chromium bug tracker [https://bugs.chromium.org/p/chromium/issues/detail?id=470669](https://bugs.chromium.org/p/chromium/issues/detail?id=470669), people visited the repo and downloaded the binaries. 
 
@@ -13,5 +17,3 @@ Not that many people though. About 25 visitors in December 2016 but increased to
 The best part is somewhat built the binaries for windows and that got people's attention. 
 
 I want to help advertise the windows binaries and get feedback.
-
-
