--- a/original/3.adoc
+++ b/original/3.adoc
@@ -1,4 +1,4 @@
-# fixing the chromium white flash journey
+== fixing the chromium white flash journey
 
 This documents how much of a pain in the ass software development still is in 2016. 
 
