--- a/blog/bringing-mouseless-to-the-average-user-brainstorming-9.adoc
+++ b/blog/bringing-mouseless-to-the-average-user-brainstorming-9.adoc
@@ -1,3 +1,5 @@
+link:index[Home]
+
 = bringing mouseless to the average user (brainstorming)
 :uri-asciidoctor: http://asciidoctor.org
 :icons: font
@@ -23,7 +25,7 @@ The average user who:
 
 - doesnt want to spent any time customizing stuff
 - doesnt want to spend time learning 
-- expects things to work etc. 
+- expects things to work **at their level** out of the gate
 
 
 There are a few advantages to be gained by bringing to the average users but not enough to justify the amount of work + risk . 
