--- a/blog/sleazy-marketing-6.adoc
+++ b/blog/sleazy-marketing-6.adoc
@@ -1,3 +1,5 @@
+link:index[Home]
+
 = Sleazy marketing
 :uri-asciidoctor: http://asciidoctor.org
 :icons: font
@@ -5,7 +7,7 @@
 
 
 
-# marketing chromium white flash fix
+== marketing chromium white flash fix
 
 since the windows binaries have been produced and the github repo has gained some work. I want to get more contributors for several reasons:
 
