--- a/blog/thinking-about-vision-and-end-goal-4.adoc
+++ b/blog/thinking-about-vision-and-end-goal-4.adoc
@@ -1,9 +1,13 @@
+link:index[Home]
+
 = thinking about vision and end goal
 :uri-asciidoctor: http://asciidoctor.org
 :icons: font
 :source-highlighter: pygments
 
 
+
+== vision
 
 Ideally, I want the white flash bug fixed in google chrome so I dont have to maintain a fork in the first place. 
 
@@ -12,8 +16,8 @@ However, since that's not going to happen anytime soon and I have no interest in
 
 There are 2 aspects to maintaining the fork:
 
-1. stable binaries to be produced using the latest stable code
-1. dealing with any merge conflicts as we update the code
+. stable binaries to be produced using the latest stable code
+. dealing with any merge conflicts as we update the code
 
 
 Since the changes are minimal, merge conflicts shouldn't be a problem. 
