--- a/original/4.adoc
+++ b/original/4.adoc
@@ -1,3 +1,5 @@
+== vision
+
 Ideally, I want the white flash bug fixed in google chrome so I dont have to maintain a fork in the first place. 
 
 However, since that's not going to happen anytime soon and I have no interest in digging my heels into the codebase. Here. we. are.
@@ -5,8 +7,8 @@ However, since that's not going to happen anytime soon and I have no interest in
 
 There are 2 aspects to maintaining the fork:
 
-1. stable binaries to be produced using the latest stable code
-1. dealing with any merge conflicts as we update the code
+. stable binaries to be produced using the latest stable code
+. dealing with any merge conflicts as we update the code
 
 
 Since the changes are minimal, merge conflicts shouldn't be a problem. 
