--- a/blog/stick-to-advanced-users-10.adoc
+++ b/blog/stick-to-advanced-users-10.adoc
@@ -1,6 +1,6 @@
 link:index[Home]
 
-= fuck the average user. Stick to advanced users.
+= Stick to advanced users.
 :uri-asciidoctor: http://asciidoctor.org
 :icons: font
 :source-highlighter: pygments
