--- a/blog/future-of-dotfiles-14.adoc
+++ b/blog/future-of-dotfiles-14.adoc
@@ -1,3 +1,12 @@
+link:index[Home]
+
+= future of dotfiles
+:uri-asciidoctor: http://asciidoctor.org
+:icons: font
+:source-highlighter: pygments
+
+
+
 ## business
 
 
