--- a/blog/me-and-the-keyboard-a-love-story-8.adoc
+++ b/blog/me-and-the-keyboard-a-love-story-8.adoc
@@ -1,9 +1,10 @@
-link:index[Home]
-
-= me and the keyboard. a love story.
 :uri-asciidoctor: http://asciidoctor.org
 :icons: font
 :source-highlighter: pygments
+
+link:index[Home]
+
+== me and the keyboard. a love story.
 
 
 
