--- a/blog/my-history-with-this-bug-2.adoc
+++ b/blog/my-history-with-this-bug-2.adoc
@@ -1,9 +1,10 @@
-link:index[Home]
-
-= My history with this bug
 :uri-asciidoctor: http://asciidoctor.org
 :icons: font
 :source-highlighter: pygments
+
+link:index[Home]
+
+== My history with this bug
 
 
 
