--- a/blog/thinking-about-vision-and-end-goal-4.adoc
+++ b/blog/thinking-about-vision-and-end-goal-4.adoc
@@ -1,13 +1,13 @@
-link:index[Home]
-
-= thinking about vision and end goal
 :uri-asciidoctor: http://asciidoctor.org
 :icons: font
 :source-highlighter: pygments
 
+link:index[Home]
+
+== thinking about vision and end goal
 
 
-== vision
+
 
 Ideally, I want the white flash bug fixed in google chrome so I dont have to maintain a fork in the first place. 
 
