--- a/blog/conclusion-7.adoc
+++ b/blog/conclusion-7.adoc
@@ -1,13 +1,13 @@
-link:index[Home]
-
-= Conclusion
 :uri-asciidoctor: http://asciidoctor.org
 :icons: font
 :source-highlighter: pygments
 
+link:index[Home]
+
+== Conclusion
 
 
-== $$$
+
 Definitely not worth monetizing. The white flash crowd is loud but they are not that numerous. 
 Although, I do get 50 unique visitors a week now as of Jan 2017. Very few follow through and download the binaries (for ubuntu).
 Shoulda tracked the windows ones.
