--- a/blog/previous-projects-12.adoc
+++ b/blog/previous-projects-12.adoc
@@ -1,9 +1,10 @@
-link:index[Home]
-
-= previous projects
 :uri-asciidoctor: http://asciidoctor.org
 :icons: font
 :source-highlighter: pygments
+
+link:index[Home]
+
+== previous projects
 
 
 
