--- a/blog/sleazy-marketing-6.adoc
+++ b/blog/sleazy-marketing-6.adoc
@@ -1,9 +1,10 @@
-link:index[Home]
-
-= Sleazy marketing
 :uri-asciidoctor: http://asciidoctor.org
 :icons: font
 :source-highlighter: pygments
+
+link:index[Home]
+
+== Sleazy marketing
 
 
 
