--- a/blog/stick-to-advanced-users-10.adoc
+++ b/blog/stick-to-advanced-users-10.adoc
@@ -1,9 +1,10 @@
-link:index[Home]
-
-= Stick to advanced users.
 :uri-asciidoctor: http://asciidoctor.org
 :icons: font
 :source-highlighter: pygments
+
+link:index[Home]
+
+== Stick to advanced users.
 
 
 
