--- a/blog/what-is-it-1.adoc
+++ b/blog/what-is-it-1.adoc
@@ -1,9 +1,10 @@
-link:index[Home]
-
-= what is it?
 :uri-asciidoctor: http://asciidoctor.org
 :icons: font
 :source-highlighter: pygments
+
+link:index[Home]
+
+== what is it?
 
 
 
