--- a/blog/index.adoc
+++ b/blog/index.adoc
@@ -76,8 +76,9 @@ link:what-is-it-1[what is it?]
 </li>
 <li>
 ++++
-link:design-decisions-11[design decisions]
+link:tech-design-decisions-11[tech design decisions]
 ++++
 </li>
-</ul></ul>
+</ul>
+<li>business</li><ul></ul></ul>
 ++++
