--- a/blog/tech-design-decisions-11.adoc
+++ b/blog/tech-design-decisions-11.adoc
@@ -1,10 +1,12 @@
 :uri-asciidoctor: http://asciidoctor.org
 :icons: font
 :source-highlighter: pygments
+:nofooter:
+
 
 link:index[Home]
 
-== design decisions
+== tech design decisions
 
 
 
