--- a/blog/rough-prototype-17.adoc
+++ b/blog/rough-prototype-17.adoc
@@ -3,6 +3,18 @@
 :source-highlighter: pygments
 :nofooter:
 
+++++
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-90513711-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
+++++
 
 link:index[Home]
 
@@ -58,6 +70,8 @@ git log --all --remotes=\* -- '*.screenrc'
 
 git log --pickaxe-all --all --remotes=\* -S"bind" -- '*.screenrc'
 
+# using github search
+https://github.com/search?utf8=%E2%9C%93&q=filename%3A.screenrc+bind&type=Code&ref=searchresults
 ```
 
 
