--- a/original/17.adoc
+++ b/original/17.adoc
@@ -46,6 +46,8 @@ git log --all --remotes=\* -- '*.screenrc'
 
 git log --pickaxe-all --all --remotes=\* -S"bind" -- '*.screenrc'
 
+# using github search
+https://github.com/search?utf8=%E2%9C%93&q=filename%3A.screenrc+bind&type=Code&ref=searchresults
 ```
 
 
