--- a/blog/index.adoc
+++ b/blog/index.adoc
@@ -5,7 +5,6 @@
 
 ++++
 <ul>
-<li>nanopay</li><ul></ul>
 <li>dotfiles</li><ul><li>
 ++++
 link:previous-projects-12[previous projects]
@@ -97,5 +96,20 @@ link:writing-and-self-censorship-15[writing and self censorship]
 ++++
 </li>
 </ul>
-<li>business</li><ul></ul></ul>
+<li>business</li><ul><li>
+++++
+link:not-all-business-is-worth-it-18[not all business is worth it]
+++++
+</li>
+<li>
+++++
+link:eat-your-own-dog-food-eventually-stops-working-19[eat your own dog food eventually stops working]
+++++
+</li>
+<li>
+++++
+link:inv-open-source-monetization-models-[inv open source monetization models]
+++++
+</li>
+</ul></ul>
 ++++
