--- a/blog/index.adoc
+++ b/blog/index.adoc
@@ -26,6 +26,11 @@ link:redefining-vision-22[redefining vision]
 link:brainstorming-prototype-23[brainstorming prototype]
 ++++
 </li>
+<li>
+++++
+link:deciding-on-key-metrics-24[deciding on key metrics]
+++++
+</li>
 </ul></ul>
 <li>dotfiles</li><ul><li>
 ++++
